--- a/popup/draft_email.css
+++ b/popup/draft_email.css
@@ -1,7 +1,7 @@
 body {
     padding: 0 10px;
     font-family: -apple-system, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    width: 450px;
+    width: 425px;
 }
 
 textarea {
@@ -38,7 +38,7 @@ label {
 
 #selectedtext, #result {
     width: 400px;
-    height: 10em;
+    height: 6rem;
     font-size: 0.8em;
 }
 
